8227373: [lworld] Monitorenter fails with VerifyError: Bad type on operand stack

Change verifier to check for a non-scalar type instead of a reference

Reviewed-by: iklam